<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".QuestaoQuatroActivity" >

     <RadioGroup
        android:id="@+id/radioGroupQ4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/QuestaoQ4"
        android:layout_centerVertical="true" >

        <RadioButton
            android:id="@+id/OpcaoUmQuestaoQuatro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/opcaoUmQuestaoQuatro"
            android:textSize="10pt" />

        <RadioButton
            android:id="@+id/OpcaoDoisQuestaoQuatro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opcaoDoisQuestaoQuatro"
            android:textSize="10pt" />

        <RadioButton
            android:id="@+id/OpcaoTresQuestaoQuatro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opcaoTresQuestaoQuatro"
            android:textSize="10pt" />

        <RadioButton
            android:id="@+id/OpcaoQuatroQuestaoQuatro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opcaoQuatroQuestaoQuatro"
            android:textSize="10pt" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonConfirmaQuestaoUm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="57dp"
        android:text="@string/ConfirmaQuestao"
        android:textSize="9pt" />

    <TextView
        android:id="@+id/QuestaoQuatro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/radioGroupQ4"
        android:layout_marginBottom="63dp"
        android:layout_toRightOf="@+id/radioGroupQ4"
        android:text="@string/QuestaoQuatro"
        android:textSize="11pt"
        android:textStyle="bold" />

</RelativeLayout>
